[package]
name = "revenq"
description = "A concurrent, revision-based event queue implementation"
version = "0.3.0"
authors = ["Erik Zscheile <zseri.devel@ytrizja.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/reclutch-nursery/revenq"
readme = "README.md"
exclude = ["/.github/", "Cargo.toml"]

[features]
default = []
std = []

[dependencies]
event-listener = "2.2"
once_cell = "1.4"

[dependencies.stable_deref_trait]
version = "1"
default-features = false

[dev-dependencies]
criterion = "0.3"
futures-lite = "0.1"

[[bench]]
name = "queue"
harness = false

[[example]]
name = "queue"
required-features = ["std"]
